--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
 
 </head>
 <body>
-    <h1>Formatura</h1>
-    <p>Com essa paginá iremos apresentar oque fizemos e oque cobisamos nesse ultimo ano.</p>
-     <ul>
-      <li>Item1</li>
-      <li>Item2</li>
-
-     </ul>
+    
      <header class="cabeçalho">
-            <h1 class="cabeçalho-titulo"></h1>
+            <h1 class="cabeçalho-titulo"> Album de formatura 3-D</h1>
+            <h2 class="cabeçalho_subtitulo">Colegio Civico-Militar Duque de Caxias</h2>
      </header>
+     <div class="Introdução">
+        <p class="paragrafo_1"> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano </p>
+        <p class="paragrafo_2"> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor Guilherme Beraldi Mandarino,
+            onde temos como objetivo alem receber nota termos uma lembrança da nossa ultima fase na escola </p>
+
+     </div>
+
+
+
+
+
+
+
 
 
      
-
-
-
-
-
-
-
 </body>
 </html>
