--- a/index.html
+++ b/index.html
@@ -7,30 +7,17 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+<body class="corpo_site">
     
      <header class="cabeçalho">
-            <h1 class="cabeçalho-titulo"> Album de formatura 3-D</h1>
+            <h1 class="cabeçalho_titulo"> Album de formatura 3-D</h1>
             <h2 class="cabeçalho_subtitulo">Colegio Civico-Militar Duque de Caxias</h2>
      </header>
-     <section class="textoformatura">
-     <div class="Introdução">
-        <h1 class="Apresentação">Oque vamos apresentar nesse site</h1>
-        <p class="paragrafo_1"> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano </p>
-        <p class="paragrafo_1"> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor Guilherme Beraldi Mandarino,
+     <section class="paragrafo-introdução">
+        <p> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano </p>
+        <p> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor Guilherme Beraldi Mandarino,
             onde temos como objetivo alem receber nota termos uma lembrança da nossa ultima fase na escola </p>
-
-     </div>
     </section>
-
-
-
-
-
-
-
-
-
      
 </body>
 </html>
