--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             <h2 class="cabeçalho_subtitulo">Colegio Civico-Militar Duque de Caxias</h2>
      </header>
      <section class="paragrafo-introdução">
-        <p> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano </p>
+        <h3> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano. </h3>
         <p> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor Guilherme Beraldi Mandarino,
-            onde temos como objetivo alem receber nota termos uma lembrança da nossa ultima fase na escola </p>
+            onde temos como objetivo alem receber nota termos uma lembrança da nossa ultima fase na escola. </p>
+            <p>Estamos programando esse album em HTML e STYLE.CSS no site do github. </p>
     </section>
      
 </body>
