--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      </header>
      <section class="paragrafo-introdução">
         <h3> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano. </h3>
-        <p> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor Guilherme Beraldi Mandarino,
+        <p> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor Guilherme Beraldi Mandarino,<br
             onde temos como objetivo alem receber nota termos uma lembrança da nossa ultima fase na escola. </p>
             <p>Estamos programando esse album em HTML e STYLE.CSS no site do github. </p>
     </section>
