--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
             <h1 class="cabeçalho_titulo"> Album de formatura 3-D</h1>
             <h2 class="cabeçalho_subtitulo">Colegio Civico-Militar Duque de Caxias</h2>
      </header>
-     <section class="paragrafo-introdução">
-        <h3> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano. </h3>
-        <br/>
-        <p> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor Guilherme Beraldi Mandarino,
-            onde temos como objetivo alem receber nota termos uma lembrança da nossa ultima fase na escola. </p>
-            <br/>
-            <p>Estamos programando esse album em HTML e STYLE.CSS no site do github. </p>
-    </section>
+     <br>
+     <br>
+     <br>
+        <h3 class="paragrafo-introdução"> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano. </h3>
+        <br>
+        <p class="paragrafo-introdução"> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor 
+            Guilherme Beraldi Mandarino, onde temos como objetivo alem receber nota termos uma lembrança da nossa 
+            ultima fase na escola. </p>
+            <p class="paragrafo-introdução">O objetivo desta página é promover o desenvolvimento do conteúdo programático do curso de 
+                Matemática II o 3° ano e também registrar momentos importantes vivios pela turma durante sua trajetória acadêmica, 
+                para recordar de forma simples e online sempre que for possível.</p>
+                <br>
+                <br>
+                <p class="paragrafo-introdução"> A turma do 3°D começou como o 2°D, juntando alguns alunos  de outras turmas para participar do 
+                    itinerário de exatas. Mas apesar disso, alguns alunos já estudam junto desde o 6° ano do fundamental II. 
+
+                </p>
      
 </body>
 </html>
