--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
      <br>
      <br>
      <br>
-        <h3 class="paragrafo-introdução"> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano. </h3>
+<section>
+    <div class="Introdução">  <h3 class="paragrafo-introdução"> Nessa pagina vamos relatar o nosso desenvolvimento desde o 1° ao 3° ano. </h3>
         <br>
         <p class="paragrafo-introdução"> Este album está sendo programado no github, tendo como lider desse projeto o nosso querido professor 
             Guilherme Beraldi Mandarino, onde temos como objetivo alem receber nota termos uma lembrança da nossa 
@@ -30,6 +31,17 @@
                     itinerário de exatas. Mas apesar disso, alguns alunos já estudam junto desde o 6° ano do fundamental II. 
 
                 </p>
+            </div>
+            <br>
+            <img src="foto_turma" alt="">
+</section>
+    <section>
+        <ul>
+            <li class="paginassecundarias"><button><a href="academia.html">desenpenho academico</a></button></li>
+            <li class="paginassecundarias"><button><a href="terceirão.html">TERCEIRÃO</a></button></li>
+            
+        </ul>
+    </section>
      
 </body>
 </html>
